<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.ryzii.vocabulary.TrainFragment">

    <Spinner
        android:id="@+id/train_type"
        android:textAlignment="center"
        android:layout_margin="8dp"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/content_main_container_shape"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="@color/textLight"
        android:text="@string/no_words_to_train_hint"/>

    <android.support.constraint.ConstraintLayout
        android:visibility="invisible"
        android:id="@+id/train_task_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="96dp"
        android:layout_marginLeft="48dp"
        android:layout_marginRight="48dp"
        android:background="@drawable/content_main_container_shape">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="12dp"
            android:layout_marginLeft="48dp"
            android:layout_marginRight="48dp"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/train_get_translation_hint"/>
        <TextView
            android:id="@+id/train_task_to_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/remember_no"
            app:layout_constraintBottom_toTopOf="parent"
            android:textAlignment="center"
            android:layout_marginBottom="100dp"
            android:textSize="36sp"/>
        <TextView
            android:id="@+id/train_translation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:textAlignment="center"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/train_task_to_translate"
            android:textSize="18sp"/>
         <Button
             android:id="@+id/remember_no"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toStartOf="@id/remember_yes"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintHorizontal_weight="1"
             android:text="@string/remember_no"
             android:textSize="20sp"
             android:background="@android:color/holo_red_dark"
             android:textColor="@color/textLight"
             />
        <Button
            android:id="@+id/remember_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/remember_no"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/remember_no"
            app:layout_constraintHorizontal_weight="1"
            android:textSize="20sp"
            android:textColor="@color/textLight"
            android:background="@android:color/holo_green_dark"
            android:text="@string/remember_yes"/>
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
