<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.ryzii.vocabulary.AddWordFragment">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/translation_direction_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="12dp">
        <TextView
            android:id="@+id/translate_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:text="Русский"
            android:textColor="@color/textLight" />

        <ImageView
            android:id="@+id/translate_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toEndOf="@+id/translate_from"
            app:layout_constraintTop_toBottomOf="@id/translate_from"
            app:layout_constraintBottom_toTopOf="@id/translate_from"
            app:srcCompat="@drawable/ic_arrow_forward_black" />

        <TextView
            android:id="@+id/translate_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/translate_direction"
            android:layout_marginStart="8dp"
            android:textSize="24sp"
            android:textColor="@color/textLight"
            android:text="Английский"/>
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintTop_toBottomOf="@id/translation_direction_container"
        android:background="@drawable/content_main_container_shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/text_to_translate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:paddingRight="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:hint="@string/text_to_translate_hint_en"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:lines="4"/>

        <ImageView
            android:id="@+id/clear_text_to_translate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_clear_black"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@id/text_to_translate"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/translation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintLeft_toLeftOf="@id/text_to_translate"
            app:layout_constraintTop_toBottomOf="@id/text_to_translate"
            android:text="@string/translation_place_hint"/>

        <Button
            android:id="@+id/save_word_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />
    </android.support.constraint.ConstraintLayout>

</LinearLayout>
